# aesadde.github.io

./: .gitignore  404.html  404.md  CNAME  README.md  about.html  about.md  about.rst  aesadde-web.cabal  archive.html  blog-aesadde.cabal  blog.html  books.html  books.md  contact.html  contact.md  deploy.sh  index.html  index.md  now.html  now.md  old-now.html  projects.html  projects.md  site.hs  stack.yaml  tags
css/: blog.css  default.css  global.css  header.css  main.css  now.css  post.css  projects.css
extras/: deploy.sh
files/: consolidation
files/consolidation/: index.html  source.html  survey.html
files/consolidation/content/: downloads_histo.eps  modules_histo.eps  (+2 more)
files/images/: books_histo.gp
js/: default.js
old-now/: old-now01.html  old-now01.md  old-now02.html  old-now02.md  old-now03.html  old-now03.md
partials/: project.html
posts/: 2016-06-11-ghc-api.html  2016-06-11-ghc-api.md  2016-07-07-ghc-core.html  2016-07-07-ghc-core.md  Example.hs  ghc_api.html  ghc_api.md  ghc_core.html  ghc_core.md  tags
posts/2016/: 2016-06-11-ghc-api.html  2016-07-07-ghc-core.html
posts/2017/: 2017-01-03-year_review.html  2017-01-03-year_review.md
projects/: 2016-01-01-haskell-stats.md  2016-01-01-sands.md  2016-05-01-consolidation.md  2016-06-01-sands.html  2016-06-01-sands.md  2016-08-01-haskell-stats.md
src/: Config.hs  Contexts.hs  Main.hs
tag-pages/: Haskell.html  life.html  programming.html
templates/: archive.html  blog.html  books.html  default.html  now.html  old-now.html  post-list.html  post.html  projects.html  tag-item.html
(+4 files in other folders)
