name:                aesadde-web
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/aesadde/aesadde-web#readme
license:             BSD3
license-file:        LICENSE
author:              Alberto Sadde
maintainer:          albertosadde@gmail.com
copyright:           2016 Alberto Sadde
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable web
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:         base
                       , hakyll
                       , containers
                       , pandoc
